Bash section added

--- a/exercises/bash/module01/exercises/ex01.md
+++ b/exercises/bash/module01/exercises/ex01.md
@@ -6,10 +6,10 @@ Buildaa Docker image. Huomaa, että `$`-merkki ei osa osa komentoa vaan on paika
 
 ```bash
 # Varmista, että olet oikeassa hakemistossa!
-cd exercises/powershell/module01
+$ cd exercises/bash/module01
 
 # Luo image (ks. docker image ls)
-docker buildx build --tag my-pwsh-image .
+$ docker buildx build --tag my-bash-image .
 ```
 
 ## Imagen käyttö
@@ -17,36 +17,33 @@ docker buildx build --tag my-pwsh-image .
 Nyt kun image on luotu, voit jatkossa luoda kontteja, jotka käyttävät tätä imagea. Tämä onnistuu seuraavalla komennolla:
 
 ```bash
-docker container run -it --rm my-pwsh-image
+$ docker container run -it --rm my-bash-image
 ```
 
-Tämä komento luo uuden kontin, joka käyttää imagea `my-pwsh-image`. Kontti on interaktiivinen (`-it`), joten voit kirjoittaa komentoja ja nähdä niiden tulosteen. Kun poistut kontista, se tuhotaan automaattisesti (`--rm`).
+Tämä komento luo uuden kontin, joka käyttää imagea `my-bash-image`. Kontti on interaktiivinen (`-it`), joten voit kirjoittaa komentoja ja nähdä niiden tulosteen. Kun poistut kontista, se tuhotaan automaattisesti (`--rm`).
 
 ## Kokeile ensimmäistä komentoa
 
 Kun olet ajanut yllä olevan `docker container run`-komennon, sinulla pitäisi näkyä PowerShell prompt, joka näyttää tältä:
 
-```powershell
-PS /skriptiohjelmointi>
+```bash
+root@45090e165c20:/skriptiohjelmointi#
 ```
 
-Aja ensimmäinen PowerShell-komentosi, eli tulosta ruudulle `Hello World!`-teksti. Käytä `Write-Host`-komentoa. Alla ohjeistus.
+Aja ensimmäinen Bash-komentosi, eli tulosta ruudulle `Hello World!`-teksti. Käytä echo-komentoa. Alla ohjeistus.
 
-```powershell
+```bash
 # Kokeile tulostaa outputtiin Hello World
-Write-Host "Hello World!"
-
-# Pääset pois exitillä tai CTRL+D pikanäppäimellä.
-exit
+echo "Hello World!"
 ```
 
 Kopioi ja liitä "Check Mark Button"-emoji tämän tehtävän otsikon loppuun violetin merkin tilalle. Tee tämä `../README.md`-tiedostossa.
 
 ## TÄRKEÄÄ
 
-Tulet käyttämään luomaasi `my-pwsh-image`-imagea jatkossa kaikissa PowerShell-harjoituksissa. Jos vaihdat tietokonetta, tai vahingossa tuhoat imagen, sinun täytyy luoda image kyseiselle koneelle uusiksi. Tee se yllä löytyvällä komennolla.
+Tulet käyttämään luomaasi `my-bash-image`-imagea jatkossa kaikissa Bash-harjoituksissa. Jos vaihdat tietokonetta, tai vahingossa tuhoat imagen, sinun täytyy luoda image kyseiselle koneelle uusiksi. Tee se yllä löytyvällä komennolla.
 
 Huomaa, että:
 
-* `docker buildx` tulee ajaa siinä hakemistossa, jossa `Dockerfile` sijaitsee, eli tässä tapauksessa `exercises/powershell/module01/`.
+* `docker buildx` tulee ajaa siinä hakemistossa, jossa `Dockerfile` sijaitsee, eli tässä tapauksessa `exercises/bash/module01/`.
 * `docker container run` komennon voit ajaa aivan missä tahansa hakemistossa, koska image on lisättynä Dockerin images-listaan (kokeile: `docker image ls`).
