--- a/exercises/powershell/module01/exercises/ex03.md
+++ b/exercises/powershell/module01/exercises/ex03.md
@@ -7,7 +7,7 @@ Luo uusi kontti, joka hyödyntää imagea, käyttämällä aiemmin tuttua koment
 Yritä tulostaa aiemmin luomasi tiedoston sisältö:
 
 ```powershell
-PS /app> Get-Content ./hi.txt
+Get-Content ./hi.txt
 ```
 
 Huomaat, että tiedostoa ei ole olemassa. Docker-kontit ovat siis lähtökohtaisesti ei-pysyviä (engl. non-persistent). Kun tuhoat kontin, myös data tuhoutuu. Kun luot uuden kontin, se luodaan imagen perusteella.
@@ -15,7 +15,7 @@ Huomaat, että tiedostoa ei ole olemassa. Docker-kontit ovat siis lähtökohtais
 Tulosta sen sijaan toisen tiedoston sisältö:
 
 ```powershell
-PS /app> Get-Content ./hello_from_docker.txt
+Get-Content ./hello_from_docker.txt
 ```
 
 Huomaat, että ruudulle tulostuu `Hello World!`. Voit nyt poistua kontin Powershell-ympäristöstä. Tutustu host-koneella olevaan tiedostoihin:
