--- a/exercises/powershell/module01/exercises/ex02.md
+++ b/exercises/powershell/module01/exercises/ex02.md
@@ -10,7 +10,7 @@ Komennon ajamalla yhdistät taas kerran PowerShell-terminaaliin, jota ajetaan ko
 
 ```powershell
 # Kirjoita tämä komento
-PS /app> "Hi all" | Out-File -FilePath hi.txt
+"Hi all" | Out-File -FilePath hi.txt
 ```
 
 Huomaa komentoa kirjoittaessa, että voit hyödyntää Tab-täydennystä. Aloita kirjoittamalla esimerkiksi `Ou` ja paina tabia. Powershell täydentää komentoa siihen asti, kunnes vastaan tulee usea komento, jotka jatkavat saman prefixin: `Out-`. Paina tabia uusiksi. Saat listan kaikista komennoista, jotka alkavat sanalla `Out-`, joista yksi on `Out-File`. Huomaat, että täydennys pelaa myös optioneiden kanssa. Kun olet päässyt kohtaan `"Hi all" | Out-File -Fi` ja painat tabia, se täydentää sanan `-FileHost` sinun puolestasi.
@@ -19,7 +19,7 @@ Kokeile tulostaa tiedoston sisältö:
 
 ```powershell
 # Tulosta
-PS /app> Get-Content ./hi.txt
+Get-Content ./hi.txt
 ```
 
 PowerShelliin pitäisi palautua tiedoston sisältö eli `Hi all`.
